adjust about photos

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -93,32 +93,32 @@
                 <h2 class="page-header">TheCodas</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
+                <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
                 <h6>Full-Stack Development & UX/UI</h6>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
+                <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
                 <h4>Raymond Ton</h4>
                 <h6>Back-End Development</h6>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
+                <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
                 <h4>Justin Winata</h4>
                 <h6> API / Back-End Development </h6>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-sm-4 text-center">
+            <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/johnny.jpg' %}" alt="" height="200" width="200" >
                 <h4>Chang Chih Chi #Johnny</h4>
                 <h6> Front-End Development & UX/UI</h6>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
-            <div class="col-lg-6 col-sm-4 text-center">
+            <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/mark.jpg' %}" alt="" height="200" width="200">
                 <h4>Mark Laver</h4>
                 <h6> API / Back-End Development </h6>
