--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -62,10 +62,13 @@
                         <a  href="#about">About</a>
                     </li>
                     <li>
-                        <a  href="#download">Download</a>
+                        <a  href="#download">Artists</a>
                     </li>
                     <li>
-                        <a  href="#contact">Contact</a>
+                        <a  href="#contact">Albums</a>
+                    </li>
+                    <li>
+                        <a  href="#contact">Top Songs</a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +119,7 @@
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/johnny.jpg' %}" alt="" height="200" width="200" >
                 <h4>Chang Chih Chi #Johnny</h4>
                 <h6> Front-End Development & UX/UI</h6>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>keeps site class!</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/mark.jpg' %}" alt="" height="200" width="200">
@@ -132,7 +135,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; TheCodas 2015</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
