--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -61,10 +61,13 @@
                         <a  href="{{ about }}">About</a>
                     </li>
                     <li>
-                        <a  href="#download">Download</a>
+                        <a  href="#download">Artists</a>
                     </li>
                     <li>
-                        <a  href="#contact">Contact</a>
+                        <a  href="#contact">Albums</a>
+                    </li>
+                    <li>
+                        <a  href="#contact">Top Songs</a>
                     </li>
                 </ul>
             </div>
