--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -11,13 +11,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Artists</title>
+    <title>Albums</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{% static 'css/thumbnail-gallery.css' %}" rel="stylesheet">
+    <link href="{% static 'css/albums.css' %}" rel="stylesheet">
     <link href="{% static 'css/grayscale.css' %}" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -71,56 +71,97 @@
         <!-- /.container -->
     </nav>
 
+
     <!-- Page Content -->
     <div class="container">
 
+        <!-- Page Header -->
         <div class="row">
-
             <div class="col-lg-12">
-                <h1 class="page-header">Artists</h1>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/kendrick_lamar.jpg' %}" alt=""> 
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/louis.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/frank.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/kanye.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/eminem.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/miles.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/bill.jpg' %}" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="{% static 'img/artist/michael.jpg' %}" alt="">
-                </a>
+                <h1 class="page-header">Albums
+                </h1>
             </div>
         </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/college.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a  href="#">College Dropout</a>
+                </h3>
+                <p></p>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/bad.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">Bad</a>
+                </h3>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/channel.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">Channel Orange</a>
+                </h3>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/encore.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">Encore</a>
+                </h3>
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/pimp_a_butterfly.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">To Pimp a Butterfly</a>
+                </h3>
+                <p></p>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/kind_of_blue.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">Kind of Blue</a>
+                </h3>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/louis_essential.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#">Essential of Louis</a>
+                </h3>
+            </div>
+            <div class="col-sm-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/portraitinjazzgroot.jpg' %}" alt="">
+                </a>
+                <h3 class="albumname">
+                    <a href="#4">Portrait in Jazz</a>
+                </h3>
+            </div>
+
+        </div>
+
+        <!-- /.row -->
 
         <hr>
 
@@ -131,6 +172,7 @@
                     <p>Copyright &copy; TheCodas 2015</p>
                 </div>
             </div>
+            <!-- /.row -->
         </footer>
 
     </div>
