--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Volume.max()</h1>
-                        <p class="intro-text">A database for musical artists, their albums, and top songs from the years 2012-2015.</p>
+                        <p class="intro-text">A database for musical artists, their albums, and top songs.</p>
                     </div>
                 </div>
             </div>
