Added About Justin Winata blurb

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -111,7 +111,7 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
                 <h4>Justin Winata</h4>
                 <h6> API / Back-End Development </h6>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>Originally from Sugar Land, TX and now currently a student at UT Austin, a part-time Software Contractor at Tempo Semiconductor, and team member trainee for Koinonia Austin trying to balance work, school, and ministry.</p>
             </div>
         </div>
         <div class="row">
