Working on nav links

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -58,7 +58,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a  href="artists">About</a>
+                        <a  href="about">About</a>
                     </li>
                     <li>
                         <a  href="artists">Artists</a>
