--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -53,13 +53,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a  href="#about">About</a>
+                        <a  href="about">About</a>
                     </li>
                     <li>
-                        <a  href="#download">Artists</a>
+                        <a  href="artists">Artists</a>
                     </li>
                     <li>
-                        <a  href="#contact">Albums</a>
+                        <a  href="albums">Albums</a>
                     </li>
                     <li>
                         <a  href="#contact">Top Songs</a>
