--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -119,7 +119,7 @@
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/johnny.jpg' %}" alt="" height="200" width="200" >
                 <h4>Chang Chih Chi #Johnny</h4>
                 <h6> Front-End Development & UX/UI</h6>
-                <p>keeps site classy!</p>
+                <p>Authentic Taiwanese, enjoys life and frienship in Austin. He tryies to keep this site classy :D</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/mark.jpg' %}" alt="" height="200" width="200">
