Tentative fix for #26

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -59,13 +59,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a  href="about">About</a>
+                        <a  href="../about">About</a>
                     </li>
                     <li>
-                        <a  href="artists">Artists</a>
+                        <a  href="../artists">Artists</a>
                     </li>
                     <li>
-                        <a  href="albums">Albums</a>
+                        <a  href="../albums">Albums</a>
                     </li>
                     <li>
                         <a  href="#contact">Top Songs</a>
