--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -56,7 +56,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="../home"></a>
                     </li>
                     <li>
                         <a  href="../about">About</a>
