--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -50,7 +50,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
-                        <a href="../home"></a>
+                        <a href="../">Home</a>
                     </li>
                     <li>
                         <a  href="../about">About</a>
