Testing change to a href links

--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -53,7 +53,7 @@
                         <a href="../">Home</a>
                     </li>
                     <li>
-                        <a  href="../about">About</a>
+                        <a  href="{% url 'about' %}">About</a>
                     </li>
                     <li>
                         <a  href="../artists">Artists</a>
