added video background for testing

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -84,6 +84,12 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Volume.max()</h1>
                         <p class="intro-text">A database for musical artists, their albums, and top songs.</p>
+                        <video id="video-background" muted>
+                        <source src="https://www.youtube.com/watch?v=FvcyZOVCORM" type="video/mp4">
+                        </video>
+
+
+
                     </div>
                 </div>
             </div>
