--- a/vmax_src/static/static_root/css/albums.css
+++ b/vmax_src/static/static_root/css/albums.css
@@ -9,3 +9,13 @@ body {
 footer {
     margin: 50px 0;
 }
+
+img {
+	border-radius: 10px;
+	border:3px solid white;
+}
+
+.albumname {
+	margin-top: 5px;
+	display: inline-block;
+}
