--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -25,6 +25,12 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css'>
 
+    <!-- YouTube Player -->
+    <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -92,16 +98,14 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Volume.max()</h1>
                         <p class="intro-text">A database for musical artists, their albums, and top songs.</p>
-                        <video autoplay id="video-background" muted>
-                        <source src="https://www.youtube.com/watch?v=FvcyZOVCORM" type="video/mp4">
-                        </video>
-
-
-
                     </div>
                 </div>
             </div>
         </div>
+        <!-- YOUTUBE VIDEO-->
+            <div class="video-player" data-property="{videoURL:'https://www.youtube.com/watch?v=EMy5krGcoOU', containment:'.module-video', quality:'large', startAt:0, autoPlay:true, loop:true, opacity:1, showControls:false, showYTLogo:false, vol:0, mute:true}"></div>
+        <!-- /YOUTUBE VIDEO-->
+
     </header>
 
    
