--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -62,7 +62,6 @@
                         <a href="{% url 'home' %}"></a>
                     </li>
                     <li>
-
                         <a  href="{% url 'about' %}">About</a>
                     </li>
                     <li>
@@ -70,15 +69,6 @@
                     </li>
                     <li>
                         <a  href="{% url 'albums' %}">Albums</a>
-
-                        <a  href="../about">About</a>
-                    </li>
-                    <li>
-                        <a  href="../artists">Artists</a>
-                    </li>
-                    <li>
-                        <a  href="../albums">Albums</a>
-
                     </li>
                     <li>
                         <a  href="#contact">Top Songs</a>
@@ -102,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <!-- YOUTUBE VIDEO-->
+        <!-- YOUTUBE VIDEO
             <div class="video-player" data-property="{videoURL:'https://www.youtube.com/watch?v=EMy5krGcoOU', containment:'.module-video', quality:'large', startAt:0, autoPlay:true, loop:true, opacity:1, showControls:false, showYTLogo:false, vol:0, mute:true}"></div>
         <!-- /YOUTUBE VIDEO-->
 
