re-add yt player

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <!-- YOUTUBE VIDEO
+        <!-- YOUTUBE VIDEO-->
             <div class="video-player" data-property="{videoURL:'https://www.youtube.com/watch?v=EMy5krGcoOU', containment:'.module-video', quality:'large', startAt:0, autoPlay:true, loop:true, opacity:1, showControls:false, showYTLogo:false, vol:0, mute:true}"></div>
         <!-- /YOUTUBE VIDEO-->
 
