--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -108,7 +108,7 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
                 <h6>Full-Stack Development & UX/UI</h6>
-                <p></p>
+                <p>A computer science major from Dallas, TX. I love sushi rolls. Dez Bryant caugh the ball fam!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
