--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -40,11 +40,13 @@
     <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
     <script src="inc/jquery.mb.YTPlayer.js"></script>
-     $(function(){
-        $(".player").YTPlayer();
-    });
+    <script>
+    $(function(){
+      $(".player").YTPlayer();
+    })
+    </script>
 
-
+    
 
 </head>
 
