--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -39,14 +39,15 @@
     <![endif]-->
     <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-    <script src="inc/jquery.mb.YTPlayer.js"></script>
+    <script src="js/jquery.mb.YTPlayer.js"></script>
     <script>
     $(function(){
       $(".player").YTPlayer();
     })
     </script>
 
-    
+
+
 
 </head>
 
@@ -103,8 +104,7 @@
         
 
         <!-- YOUTUBE VIDEO-->
-        <div id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">
-        </div>
+         <a id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">My video</a>
         <!-- /YOUTUBE VIDEO-->
 
     </header>
