--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -98,15 +98,17 @@
             </div>
         </div>
 
-        
+        <div style = "position: fixed; z-index: -99; width: 100%; height: 100%">
+
+            <iframe width=100% height=100% src="https://www.youtube.com/embed/BsekcY04xvQ?autoplay=1&controls=0&showinfo=0&autohide=1&mute=1" frameborder="0" allowfullscreen>
+            </iframe>
+        </div>
+
+
 
 
     </header>
     
-        <!-- YOUTUBE VIDEO-->
-         <a id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
-        <!-- /YOUTUBE VIDEO-->
-
    
     <!-- Footer -->
     <footer>
