--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -100,7 +100,7 @@
 
         <div style = "position: fixed; z-index: -99; width: 100%; height: 100%">
 
-            <iframe width=100% height=100% src="https://www.youtube.com/embed/BsekcY04xvQ?autoplay=1&controls=0&showinfo=0&autohide=1&mute=1" frameborder="0" allowfullscreen>
+            <iframe width="100%" height="100%" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/BsekcY04xvQ?autoplay=1&controls=0&showinfo=0&autohide=1&mute=1" >
             </iframe>
         </div>
 
