--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -104,7 +104,10 @@
             </iframe>
         </div>
 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LraNu_78sCw" frameborder="0" allowfullscreen></iframe>
+ You can find the video  
+ <a href="https://www.youtube.com/embed/LraNu_78sCw">here.</a>            
+</iframe>
 
 
     </header>
