--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -104,10 +104,7 @@
             </iframe>
         </div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LraNu_78sCw" frameborder="0" allowfullscreen></iframe>
- You can find the video  
- <a href="https://www.youtube.com/embed/LraNu_78sCw">here.</a>            
-</iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/LraNu_78sCw?autoplay=1&showinfo=0&mute=1&controls=0" frameborder="0" allowfullscreen></iframe>
 
 
     </header>
