--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -95,13 +95,12 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Volume.max()</h1>
-                        <p class="intro-text">A database for musical artists, their albums, and top songs.</p>
+                        <p class="intro-text">A database for musical artists, and their albums.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        
 
         <!-- YOUTUBE VIDEO-->
          <a id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">My video</a>
