--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" background="https://archetypeonlinemagazine.files.wordpress.com/2015/04/red-vinyl-disk-turntable-music-hd-wallpaper-zoomwalls-music-wallpaper-hd-wallpapers-for-walls-bedroom-download-android-iphone-border-1080p-free.jpg">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" background=url("https://archetypeonlinemagazine.files.wordpress.com/2015/04/red-vinyl-disk-turntable-music-hd-wallpaper-zoomwalls-music-wallpaper-hd-wallpapers-for-walls-bedroom-download-android-iphone-border-1080p-free.jpg")>
                 <div style = "position: fixed; z-index: -99; width: 100%; height: 100%">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LraNu_78sCw?autoplay=1&showinfo=0&mute=1&controls=0" frameborder="0" allowfullscreen></iframe>   
             </div>
