--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -43,7 +43,7 @@
             </div> -->
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div>
+        <div class="container"i>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
@@ -83,7 +83,7 @@
 
             
 
-            <div class="container">
+            <div>
 
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
