--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head background="{% static 'img/background.jpg' %}">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -83,13 +83,13 @@
 
             
 
-            <div>
+            <div class="container">
 
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Volume.max()</h1>
 
-                        <p class="intro-text">A database for musical artists, their albums, and top songs.</p>
+                        <p class="intro-text">A database for musical artists and their albums.</p>
                     </div>
                 </div>
             </div>
