eminem sample page

--- a/vmax_src/templates/eminem.html
+++ b/vmax_src/templates/eminem.html
@@ -85,7 +85,7 @@
 
         
 
-       <img class="img-responsive" src="{% static 'img/artist/eminem_page.jpg' %}" alt=""> 
+       <img src="{% static 'img/artist/eminem_page.jpg' %}" alt=""> 
 
 
 
