--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head background="{% static 'img/background.jpg' %}">
+<head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" background="{% static 'img/background.jpg' %}">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!--           <div style = "position: fixed; z-index: -99; width: 100%; height: 100%">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LraNu_78sCw?autoplay=1&showinfo=0&mute=1&controls=0" frameborder="0" allowfullscreen></iframe>   
             </div> -->
@@ -79,7 +79,7 @@
     <!-- Intro Header -->
     <header class="intro">
 
-        <div class="intro-body">
+        <div class="intro-body" style="background-img:url({% static 'img/background.jpg' %})">
 
             
 
