add red highlighting

--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-sm-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/bad.jpg' %}" alt="">
+                    <img class="img-responsive k" src="{% static 'img/albums/bad.jpg' %}" alt="">
                 </a>
                 <h3 class="albumname">
                     <a href="#">Bad</a>
