--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -106,7 +106,7 @@ a:focus {
 
 .navbar-custom .nav li a:hover {
     outline: 0;
-    color: #D50000;rgba(255,255,255,.8)
+    color: rgba(255,255,255,.8);
     background-color: transparent;
 }
 
