--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -83,7 +83,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
+                <a class="thumbnail redglow" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/louis.jpg' %}" alt="">
                 </a>
             </div>
