added several artists' html pages

--- a/vmax_src/templates/kanyewest.html
+++ b/vmax_src/templates/kanyewest.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>EMINEM</title>
+    <title>Kanye West</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -85,7 +85,7 @@
 
         
 
-       <img src="{% static 'img/artist/eminem_page.jpg' %}" alt=""> 
+       <img src="{% static 'img/artist/kanye_page.jpg' %}" alt=""> 
 
 
 
