--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -93,7 +93,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
+                <a class="thumbnail" href="{% url 'kanyewest' %}">
                     <img class="img-responsive" src="{% static 'img/artist/kanye.jpg' %}" alt="">
                 </a>
             </div>
@@ -114,7 +114,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
+                <a class="thumbnail" href="{% url 'michael' %}">
                     <img class="img-responsive" src="{% static 'img/artist/michael.jpg' %}" alt="">
                 </a>
             </div>
