--- a/vmax_src/static/vmax_static/css/thumbnail-gallery.css
+++ b/vmax_src/static/vmax_static/css/thumbnail-gallery.css
@@ -12,4 +12,6 @@ footer {
 
 a.thumbnail:hover {
 	box-shadow: 0 0 20px #D50000;
+	-moz-box-shadow: 0 0 20px #D50000;
+	-webkit-box-shadow: 0 0 20px #D50000;
 }
