--- a/vmax_src/templates/eminem.html
+++ b/vmax_src/templates/eminem.html
@@ -80,14 +80,14 @@
             </div>
         </div>
 
-        <hr>
+        
 
 
         
-
+        <!-- photo -->
        <img src="{% static 'img/artist/eminem_page.jpg' %}" alt=""> 
 
-
+       <hr>
 
 
 
