--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -135,8 +135,8 @@
         <hr>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="https://github.com/efeelaiho/TheCodas">
-                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-Light-64px.png' %}" alt="">
+                <a href="https://github.com/efeelaiho/TheCodas">
+                    <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
             </div>
         </div>
