Added links to apiary and wiki and issues

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -139,6 +139,21 @@
                     <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
             </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="https://github.com/efeelaiho/TheCodas/wiki">
+                    <img class="img-responsive" src="{% static 'img/GGitHub-Mark-64px.png' %}" alt="">
+                </a>
+            </div>            
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="https://github.com/efeelaiho/TheCodas/issues">
+                    <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
+                </a>
+            </div> 
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="http://volumemin.marklaver.apiary.io/#">
+                    <img class="img-responsive" src="{% static 'img/apiary-logo.png' %}" alt="">
+                </a>
+            </div> 
         </div>
 
         <hr>
