Fixed typo, adding text

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -138,10 +138,11 @@
                 <a href="https://github.com/efeelaiho/TheCodas">
                     <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
+                <h6>GitHub Code Repository</h6>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="https://github.com/efeelaiho/TheCodas/wiki">
-                    <img class="img-responsive" src="{% static 'img/GGitHub-Mark-64px.png' %}" alt="">
+                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-64px.png' %}" alt="">
                 </a>
             </div>            
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
