--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -142,18 +142,21 @@
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="https://github.com/efeelaiho/TheCodas/wiki">
-                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-64px.png' %}" alt="">
+                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-Light-120px-plus.png' %}" alt="">
                 </a>
+                <h6>GitHub Wiki</h6>
             </div>            
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="https://github.com/efeelaiho/TheCodas/issues">
                     <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
+                <h6>GitHub Issue Tracker</h6>
             </div> 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="http://volumemin.marklaver.apiary.io/#">
                     <img class="img-responsive" src="{% static 'img/apiary-logo.png' %}" alt="">
                 </a>
+                <h6>Apiary API</h6>
             </div> 
         </div>
 
