--- a/vmax_src/static/static_root/css/grayscale.css
+++ b/vmax_src/static/static_root/css/grayscale.css
@@ -10,6 +10,13 @@ body {
     font-family: Jura,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
+    background-image: url("img/soundwave.jpg") no-repeat fixed;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover;    /* Mozilla*/
+    -o-background-size: cover;      /* Opera*/
+    background-size: cover;         /* Generic*/
+    margin: 0;
+    height: 100%;
 }
 
 
@@ -59,7 +66,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #1d9b6c;
+    color: #D50000;
 }
 
 .light {
@@ -379,14 +386,8 @@ body {
 }
 
 
-#video-background {
-/*  making the video fullscreen  */
-  position: fixed;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: -100;
+.profilepic{
+    margin-left: 20px;
+
+
 }
