--- a/vmax_src/static/static_root/css/thumbnail-gallery.css
+++ b/vmax_src/static/static_root/css/thumbnail-gallery.css
@@ -10,3 +10,8 @@ footer {
     margin: 50px 0;
 }
 
+a.thumbnail:hover {
+	box-shadow: 0 0 20px #D50000;
+	-moz-box-shadow: 0 0 20px #D50000;
+	-webkit-box-shadow: 0 0 20px #D50000;
+}
