--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -142,7 +142,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                 <a href="https://github.com/efeelaiho/TheCodas/wiki">
-                    <img class="img-responsive" src="{% static 'img/GitHub-Mark-Light-120px-plus.png' %}" alt="">
+                    <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
                 </a>
                 <h6>GitHub Wiki</h6>
             </div>            
