Added captions for each artist

--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -77,46 +77,54 @@
                 <h1 class="page-header">Artists</h1>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/kendrick_lamar.jpg' %}" alt=""> 
                 </a>
+                <h6>Kendrick Lamar</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail redglow" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/louis.jpg' %}" alt="">
                 </a>
+                <h6>Louis Armstrong</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/frank.jpg' %}" alt="">
                 </a>
+                <h6>Frank Ocean</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="{% url 'kanyewest' %}">
-                    <img class="img-responsive" src="{% static 'img/artist/kanye.jpg' %}" alt="">
+                    <img class="img-responsive" src="{% static 'img/artist/kanye.jpg' %}" alt="Kanye West">
                 </a>
+                <h6>Kanye West</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="{% url 'eminem' %}">
                     <img class="img-responsive" src="{% static 'img/artist/eminem.jpg' %}" alt="">
 
                 </a>
+                <h6>Eminem</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/miles.jpg' %}" alt="">
                 </a>
+                <h6>Miles Davis</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/artist/bill.jpg' %}" alt="">
                 </a>
+                <h6>Bill Evans</h6>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="{% url 'michael' %}">
                     <img class="img-responsive" src="{% static 'img/artist/michael.jpg' %}" alt="">
                 </a>
+                <h6>Michael Jackson</h6>
             </div>
         </div>
 
