--- a/vmax_src/templates/bad.html
+++ b/vmax_src/templates/bad.html
@@ -82,10 +82,10 @@
 
         
 
-                <img src="{% static 'img/albums/albums_large/bad_large.jpg' %}" alt="" align="middle">
+                <img src="{% static 'img/albums/albums_large/bad_large.jpg' %}" alt="" align="center">
             
 
-                <h2 align="middle">Editors' Notes</h2>
+                <h2 align="middle" >Editors' Notes</h2>
                 <p>After Thriller's unprecedented success, Michael Jackson had the impossible task of writing and recording a follow-up. Working under incredible pressure, Jackson expanded on the sonic challenges of Off the Wall and Thriller without losing the radio-ready grooves that had made him an international star. Bad starts with the playful and funky braggadocio of the title track and the upbeat thrill of "The Way You Make Me Feel." Yet "Man in the Mirror" pokes fun at Jackson's mythological status, while "I Just Can't Stop Loving You" delivers a power ballad with a brainwashing hook worthy of MJ's self-proclaimed (and justified) title of The King of Pop. The sound of the '80s is all over this record, with enhanced beats and funky synths that made it cutting-edge in 1987. "Just Good Friends" is a classy duet with Stevie Wonder. However, it's Jackson's fantasies—"Speed Demon," "Smooth Criminal," "Dirty Diana"—that push this album over the top.</p>
                 <h3>Track listing</h3>
                 <ol>
