--- a/vmax_src/templates/college_drop_out.html
+++ b/vmax_src/templates/college_drop_out.html
@@ -82,7 +82,7 @@
 
         
 
-                <img src="{% static 'img/albums/albums_large/college_large.jpg' %}" alt="" align="middle">
+                <img src="{% static 'img/albums/albums_large/college_large.jpg' %}" alt="" align="center">
 
                 <h2 align="middle">Editors' Notes</h2>
                 <p>In the early ‘00s, Kanye West gained notoriety as a producer-for-hire before The College Dropout shook hip-hop to its core. The mix of styles and subject matter is breathtaking. Pop hits rub up against vulnerable moments. Street anthems mingle with wild humor. And “Jesus Walks” challenges beliefs like no other rap song before it. In the hands of a lesser artist, The College Dropoout might have ended a career. Kanye West attacks the set with confidence and conviction—a beacon of things to follow.</p>
