Added stats to about

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -98,18 +98,27 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
                 <h6>Full-Stack Development & UX/UI</h6>
+                <h6>Number of Commits: 38</h6>
+                <h6>Number of Issues: 12</h6>
+                <h6>Number of Unit Tests: 0</h6>
                 <p>A computer science major from Dallas,TX. I love sushi rolls. Dez Bryant caught the ball fam!</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
                 <h4>Raymond Ton</h4>
                 <h6>Back-End Development</h6>
+                <h6>Number of Commits: 7</h6>
+                <h6>Number of Issues: 5</h6>
+                <h6>Number of Unit Tests: 6</h6>
                 <p>Student seeking a bachelor's degree in computer science. Interests include online gaming, music, basketball.</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
                 <h4>Justin Winata</h4>
                 <h6> API / Back-End Development </h6>
+                <h6>Number of Commits: 29</h6>
+                <h6>Number of Issues: 6</h6>
+                <h6>Number of Unit Tests: </h6>
                 <p>Originally from Sugar Land, TX and now currently a student at UT Austin, a part-time Software Contractor at Tempo Semiconductor, Inc., and team member trainee for Koinonia Austin trying to balance work, school, and ministry.</p>
             </div>
         </div>
@@ -118,7 +127,9 @@
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/johnny.jpg' %}" alt="" height="200" width="200" >
                 <h4>Chang Chih Chi #Johnny</h4>
                 <h6> Front-End Development & UX/UI</h6>
-
+                <h6>Number of Commits: 45</h6>
+                <h6>Number of Issues: 2</h6>
+                <h6>Number of Unit Tests: 0</h6>
                 <p>Authentic Taiwanese, enjoys life and friendship in Austin. He tries to keep this site classy :D</p>
 
             </div>
@@ -126,7 +137,9 @@
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/mark.jpg' %}" alt="" height="200" width="200">
                 <h4>Mark Laver</h4>
                 <h6> API / Back-End Development/ Server </h6>
-
+                <h6>Number of Commits: 31</h6>
+                <h6>Number of Issues: 5</h6>
+                <h6>Number of Unit Tests: 0</h6>
                 <p>Mark is a former Marine pursuing a bachelor's degree in computer science. Interests include scuba and history.</p>
 
             </div>
