Fixed broken apiary link and moved github links

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -143,10 +143,21 @@
                 <p>Mark is a former Marine pursuing a bachelor's degree in computer science. Interests include scuba and history.</p>
 
             </div>
+            <div class="col-lg-4 col-sm-4 text-center">
+                <img class="img-circle img-responsive img-center" src="{% static 'img/GitHub-Mark-Light-120px-plus.png' %}" alt="" height="200" width="200">
+                <h5><a href="https://github.com/efeelaiho/TheCodas">GitHub Code Repository</a></h5>
+                <h5><a href="https://github.com/efeelaiho/TheCodas/wiki">GitHub Wiki</a></h5>
+                <h5><a href="https://github.com/efeelaiho/TheCodas/issues">GitHub Issue Tracker</a></h5>
+                <a href="http://docs.volumemax.apiary.io/#">
+                    <img class="img-responsive" src="{% static 'img/apiary-logo.png' %}" alt="">
+                </a>
+            </div>            
         </div>
 
         <hr>
+        
         <div class="row">
+            <!--
             <div class="col-lg-3 col-md-4 col-xs-6 text-center">
                 <a href="https://github.com/efeelaiho/TheCodas">
                     <img class="img-responsive" src="{% static 'img/GitHub_Logo.png' %}" alt="">
@@ -165,12 +176,14 @@
                 </a>
                 <h6>GitHub Issue Tracker</h6>
             </div> 
+        -->        <!--
             <div class="col-lg-3 col-md-4 col-xs-6 text-center">
-                <a href="http://volumemin.marklaver.apiary.io/#">
+                <a href="http://docs.volumemax.apiary.io/#">
                     <img class="img-responsive" src="{% static 'img/apiary-logo.png' %}" alt="">
                 </a>
-                <h6>Apiary API</h6>
+               <h6>Apiary API</h6>
             </div> 
+-->
         </div>
         <!-- Stats Row -->
         <div class="row">
