modified octocat more

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -145,6 +145,7 @@
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/GitHub-Mark-Light-120px-plus.png' %}" alt="" height="200" width="200">
+                <h4>Github</h4>
                 <h5><a href="https://github.com/efeelaiho/TheCodas" target="_blank">GitHub Code Repository</a></h5>
                 <h5><a href="https://github.com/efeelaiho/TheCodas/wiki" target="_blank">GitHub Wiki</a></h5>
                 <h5><a href="https://github.com/efeelaiho/TheCodas/issues" target="_blank">GitHub Issue Tracker</a></h5>
