--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -101,7 +101,7 @@
                 <h6>Number of Commits: 38</h6>
                 <h6>Number of Issues: 12</h6>
                 <h6>Number of Unit Tests: 0</h6>
-                <p>A computer science major from Dallas,TX. I love sushi rolls. Dez Bryant caught the ball fam!</p>
+                <p>A computer science major from Dallas,TX. Loves sushi rolls. Firmly believes Dez Bryant caught the ball!</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
