--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -17,7 +17,7 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{% static 'css/albums.css' %}" rel="stylesheet">
+    <link href="{% static 'css/thumbnail-gallery.css' %}" rel="stylesheet">
     <link href="{% static 'css/grayscale.css' %}" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -49,9 +49,8 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    
                     <li>
-                        <a  href="{% url 'about' %}">About</a>
+                        <a  href="../about">About</a>
                     </li>
                     <li>
                         <a  href="../artists">Artists</a>
@@ -66,96 +65,65 @@
         <!-- /.container -->
     </nav>
 
-
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Page Header -->
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Albums
-                </h1>
-            </div>
-        </div>
-        <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="{% url 'college' %}">
+            <div class="col-lg-12">
+                <h1 class="page-header">Albums</h1>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="{% static 'img/albums/pimp_a_butterfly.jpg' %}" alt=""> 
+                </a>
+                <h6>To Pimp A Butterfly</h6>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail redglow" href="{% url 'college' %}">
                     <img class="img-responsive" src="{% static 'img/albums/college.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a  href="{% url 'college' %}">College Dropout</a>
-                </h6>
-                <p></p>
+                <h6>College Dropout</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="{% url 'bad' %}">
-                    <img class="img-responsive k" src="{% static 'img/albums/bad.jpg' %}" alt="">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="{% url 'bad' %}">
+                    <img class="img-responsive" src="{% static 'img/albums/bad.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="{% url 'bad' %}">Bad</a>
-                </h6>
+                <h6>Bad</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="#">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/albums/channel.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="#">Channel Orange</a>
-                </h6>
+                <h6>Orange Channel</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="{% url 'encore' %}">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="{% url 'encore' %}">
                     <img class="img-responsive" src="{% static 'img/albums/encore.jpg' %}" alt="">
-                </a>
-                <h6 class="albumname">
-                    <a href="{% url 'encore' %}">Encore</a>
-                </h6>
-            </div>
 
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="#">
-                    <img class="img-responsive" src="{% static 'img/albums/pimp_a_butterfly.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="#">To Pimp a Butterfly</a>
-                </h6>
-                <p></p>
+                <h6>Encore</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="#">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/albums/kind_of_blue.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="#">Kind of Blue</a>
-                </h6>
+                <h6>Kind of Blue</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="#">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/albums/louis_essential.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="#">Essential of Louis</a>
-                </h6>
+                <h6>Essential of Louis</h6>
             </div>
-            <div class="col-sm-3 portfolio-item text-center">
-                <a href="#">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <a class="thumbnail" href="#">
                     <img class="img-responsive" src="{% static 'img/albums/portraitinjazzgroot.jpg' %}" alt="">
                 </a>
-                <h6 class="albumname">
-                    <a href="#4">Portrait in Jazz</a>
-                </h6>
+                <h6>Portrait in Jazz</h6>
             </div>
-
         </div>
-        <!-- /.row -->
 
         <hr>
 
@@ -166,7 +134,6 @@
                     <p>Copyright &copy; TheCodas 2015</p>
                 </div>
             </div>
-            <!-- /.row -->
         </footer>
 
     </div>
